--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,28 @@
 
 @keyframes pulseColor {
   0%, 100% {
-    opacity: 0;
+    opacity: 1;
   }
   50% {
-    opacity: 0.5;
+    opacity: 1;
   }
 }
 
 .animate-pulse-color {
-  animation: pulseColor 3s infinite;
+  animation: pulseColor 7s infinite;
+}
+
+.background {
+  min-height: 100vh;
+  --s: 300px; /* control the size */
+  --c: #555C6D; /* first color */
+
+  --_g: #0000 52%, var(--c) 54% 57%, #0000 59%;
+  background:
+    radial-gradient(farthest-side at -33.33% 50%, var(--_g)) 0 calc(var(--s)/2),
+    radial-gradient(farthest-side at 50% 133.33%, var(--_g)) calc(var(--s)/2) 0,
+    radial-gradient(farthest-side at 133.33% 50%, var(--_g)),
+    radial-gradient(farthest-side at 50% -33.33%, var(--_g)),
+    #E09EA4; /* second color */
+  background-size: calc(var(--s)/4.667) var(--s), var(--s) calc(var(--s)/4.667);
 }
