--- a/src/index.css
+++ b/src/index.css
@@ -20,42 +20,28 @@ p {
 }
 
 #menu a.active {
-  color: #555C6D;
+  color: #E5B446;
 }
 
 .nav-link:hover {
   transition: all .5s ease-in-out;
-  color: #555C6D;
+  color: #E5B446;
 }
 
-@keyframes pulseColor {
-  0%, 100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.5;
-  }
-}
-
-.animate-pulse-color {
-  animation: pulseColor 1s infinite;
-}
-
-
-.background {
+/* .background {
   min-height: 100vh;
-  --s: 300px; /* control the size */
-  --c: #555C6D; /* first color */
+  --s: 300px;
+  --c: #555C6D;
   --_g: #0000 52%, var(--c) 54% 57%, #0000 59%;
   background:
     radial-gradient(farthest-side at -33.33% 50%, var(--_g)) 0 calc(var(--s)/2),
     radial-gradient(farthest-side at 50% 133.33%, var(--_g)) calc(var(--s)/2) 0,
     radial-gradient(farthest-side at 133.33% 50%, var(--_g)),
     radial-gradient(farthest-side at 50% -33.33%, var(--_g)),
-    #E09EA4; /* second color */
+    #E09EA4;
   background-size: calc(var(--s)/4.667) var(--s), var(--s) calc(var(--s)/4.667);
   background-attachment: fixed;
-}
+} */
 
 /* .background:hover {
   min-height: 100vh;
@@ -70,3 +56,80 @@ p {
     #555C6D;
   background-size: calc(var(--s)/4.667) var(--s), var(--s) calc(var(--s)/4.667);
 } */
+
+/* .background:hover {
+  min-height: 100vh;
+  --s: 300px;
+  --c: #555C6D;
+  --_g: #0000 52%, var(--c) 54% 57%, #0000 59%;
+  background:
+    radial-gradient(farthest-side at 133.33% 50%, var(--_g)) 0 calc(var(--s)/2),
+    radial-gradient(farthest-side at 50% -33.33%, var(--_g)) calc(var(--s)/2) 0,
+    radial-gradient(farthest-side at -33.33% 50%, var(--_g)),
+    radial-gradient(farthest-side at 50% 133.33%, var(--_g)),
+    #E09EA4;
+  background-size: calc(var(--s)/4.667) var(--s), var(--s) calc(var(--s)/4.667);
+  background-attachment: fixed;
+} */
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40vh 0 0 0;
+  min-height: 100vh;
+}
+
+.mainDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+}
+
+.announcement {
+  margin: 1rem 0;
+  border-radius: 3vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1.5rem;
+  padding: 0 1rem;
+}
+
+.line {
+  background-color: #D7585F;
+  display: flex;
+  flex-direction:row;
+  height:50vh;
+  width: 5px;
+  margin: 1rem 0;
+  filter: blur(1px);
+}
+
+.noise{
+  background: #8D8CBD;
+  background-image: url(./images/noise.png);
+}
+
+.noise-red{
+  background: #D7585F;
+  background-image: url(./images/noise.png);
+}
+
+.ground {
+  width: 500px;
+  bottom: 100px;
+  mix-blend-mode: multiply;
+}
+
+.ground-shadow {
+  position: absolute;
+  width: 100%;
+  height: 140px;
+  border-radius: 50%;
+  background: radial-gradient(ellipse at 50%, #800000, rgba(0, 0, 0, 0)), url('./images/shadow_noise.svg');
+  filter: contrast(150%) brightness(700%);
+}
