--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ p {
   color: #E5B446;
 }
 
-.nav-link:hover {
+.nav-link:hover, .socials:hover {
   transition: all .5s ease-in-out;
   color: #E5B446;
 }
@@ -107,6 +107,7 @@ p {
   width: 5px;
   margin: 1rem 0;
   filter: blur(1px);
+  z-index: 1;
 }
 
 .noise{
